feat: staff scoreboard
